--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,25 +1,53 @@
+name: Go CI
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
+
     steps:
+      # Checkout repo
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-go@v5
+      # Setup Go
+      - name: Setup Go
+        uses: actions/setup-go@v5
         with:
           go-version: '1.24.5'
 
+      # Cache Go modules (tăng tốc)
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
+      # Install Wire
       - name: Install Wire
         run: go install github.com/google/wire/cmd/wire@latest
 
-      - name: Generate Wire
+      # Generate Wire code
+      - name: Generate Wire code
         run: wire ./internal/infrastructure/wire/...
 
+      # Run tests (mock-only, không cần env)
       - name: Run tests
         run: go test -v ./...
 
+      # Build main.exe
       - name: Build main.exe
         run: go build -o ./bin/main.exe cmd/app/main.go
 
+      # Upload binary as artifact
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
