--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           go-version: '1.24.5'
 
-      # Cache Go modules (tăng tốc)
+      # Cache Go modules
       - name: Cache Go modules
         uses: actions/cache@v3
         with:
@@ -39,7 +39,7 @@ jobs:
       - name: Generate Wire code
         run: wire ./internal/infrastructure/wire/...
 
-      # Run tests (mock-only, không cần env)
+      # Run tests
       - name: Run tests
         run: go test -v ./...
 
