--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,12 +24,10 @@ jobs:
       - name: Cache Go modules
         uses: actions/cache@v3
         with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
+          path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          restore-keys: ${{ runner.os }}-go-
+
 
       # Install Wire
       - name: Install Wire
